--- a/Automatic differentiation.ipynb
+++ b/Automatic differentiation.ipynb
@@ -6,9 +6,8 @@
     "id": "EizhWzBqggOs"
    },
    "source": [
-    "# Lab session 1 & 2: Introduction to PyTorch and Automatic Differentiation\n",
+    "# Introduction to PyTorch and Automatic Differentiation\n",
     "\n",
-    "Authors: [pierre.tandeo@imt-atlantique.fr](pierre.tandeo@imt-atlantique.fr) and [lucas.drumetz@imt-atlantique.fr](lucas.drumetz@imt-atlantique.fr)\n",
     "\n",
     "Year: 2023-2024"
    ]
@@ -27,7 +26,7 @@
     "- it is one of the most important deep learning library\n",
     "- it can interact with classical machine learning libraries like *Scikit-learn*\n",
     "\n",
-    "This lab session is an introduction. It gives you the general concepts of neural nets and helps you to implement them using a dedicated Python library. If you want to play with similar regression and classification examples in small dimensions, you can use http://playground.tensorflow.org/. For more details concerning the implementation of PyTorch, please visit this tutorial at https://pytorch.org/tutorials/."
+    "This project gives you the general concepts of neural nets and helps you to implement them using a dedicated Python library. If you want to play with similar regression and classification examples in small dimensions, you can use http://playground.tensorflow.org/. For more details concerning the implementation of PyTorch, please visit this tutorial at https://pytorch.org/tutorials/."
    ]
   },
   {
