--- a/CNN on MNIST.ipynb
+++ b/CNN on MNIST.ipynb
@@ -6,12 +6,7 @@
     "id": "mE2F5Cj5X-cq"
    },
    "source": [
-    "# Lab session 4 | Convolutional Neural Networks (CNN) with pytorch\n",
-    "\n",
-    "pierre-henri.conze@imt-atlantique.fr \\\\\n",
-    "francois.rousseau@imt-atlantique.fr \\\\\n",
-    "sarah.reynaud@imt-atlantique.fr \\\\\n",
-    "claire.scavinner-dorval@imt-atlantique.fr\n",
+    "#  Convolutional Neural Networks (CNN) with pytorch\n",
     "\n",
     "---\n",
     "\n"
@@ -25,7 +20,7 @@
    "source": [
     "## Objective of this lab session: perform classification on MNIST using convolutional neural networks\n",
     "\n",
-    "In lab session 3, MNIST classification has been performed relying on Multi-Layer Perceptron (MLP) models. The obtained accuracy was 92% with a softmax regressor and 97% (or 98%) with a deeper MLP. This can be further improved! Let us jump from such simple models to something moderately more sophisticated, namely **Convolutional Neural Networks** (CNN).\n",
+    " MNIST classification has been performed relying on Multi-Layer Perceptron (MLP) models. The obtained accuracy was 92% with a softmax regressor and 97% (or 98%) with a deeper MLP. This can be further improved! Let us jump from such simple models to something moderately more sophisticated, namely **Convolutional Neural Networks** (CNN).\n",
     "\n",
     "For recall, **MNIST** is a computer vision dataset which consists of handwritten digit images with associated label. Each image in MNIST has a corresponding label - a number between 0 and 9 - representing the digit drawn in the image."
    ]
@@ -145,15 +140,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "FQKjqImJ4mKx"
-   },
-   "source": [
-    "#### **Question 1.1** - Complete the following cell to create **data loaders** ([documentation](https://pytorch.org/docs/stable/data.html)) for training, validation and test sets."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
@@ -265,23 +251,10 @@
    "source": [
     "### 2- Simple CNN architecture\n",
     "\n",
-    "Let us define a simple **CNN architecture**. The network will take as inputs 28x28 images instead of 784-dimensional tensors of pixel values as for MLP models. As in lab session 3, it will produce as output a tensor of length 10 (i.e. the number of classes) that indicates the class scores for each input image. A CNN architecture is a stack of layers including:\n",
+    "Let us define a simple **CNN architecture**. The network will take as inputs 28x28 images instead of 784-dimensional tensors of pixel values as for MLP models.  A CNN architecture is a stack of layers including:\n",
     "  - convolutional layer using *nn.Conv2D* ([documentation](https://pytorch.org/docs/stable/generated/torch.nn.Conv2d.html))\n",
     "  - max-pooling layer using *nn.MaxPool2D* ([documentation](https://pytorch.org/docs/stable/generated/torch.nn.MaxPool2d.html))\n",
     "  - regular densely-connected layer using *nn.Linear* ([documentation](https://pytorch.org/docs/stable/generated/torch.nn.Linear.html))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "897aqt3UyfHz"
-   },
-   "source": [
-    "#### **Question 2.1** - In this first network architecture (*Net1*), employ:\n",
-    " - 2 consecutive convolutional layers using 32 3x3 filters with stride 1 followed by *ReLU* activation,\n",
-    " - a max pooling with vertical and horizontal downscale of 2,\n",
-    " - a flatten operator to flatten the input array,\n",
-    " - a dense layer with 10 units."
    ]
   },
   {
@@ -362,15 +335,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "OG8wQhudOvOE"
-   },
-   "source": [
-    "#### **Question 2.2** - Describe input/output sizes of each layer"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
@@ -417,15 +381,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "OWkV71ZLI2ZO"
-   },
-   "source": [
-    "#### **Question 2.3** - Before training a model, configure the learning process by indicating the criterion (i.e the objective loss function the model will try to minimize) as well as the optimizer."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
@@ -453,9 +408,7 @@
     "id": "dxYFf5sG0_XC"
    },
    "source": [
-    "### 3- Training\n",
-    "\n",
-    "#### **Question 3.1** - Complete the following cell to perform the training."
+    "### 3- Training\n"
    ]
   },
   {
@@ -700,9 +653,7 @@
     "id": "NM5BWPs_3Pbz"
    },
    "source": [
-    "### 4- Testing\n",
-    "\n",
-    "#### **Question 4.1** - Complete the following cell to test the (best) model on previously unseen test data and evaluate its performance through per-class and global accuracy scores."
+    "### 4- Testing\n"
    ]
   },
   {
@@ -791,15 +742,6 @@
    ],
    "source": [
     "evaluation(cnn_1, test_loader, criterion) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "H6Qr8y1JrplH"
-   },
-   "source": [
-    "#### **Question 4.2** - What is the overall accuracy achieved for test data? **Answer** : ... %."
    ]
   },
   {
@@ -916,15 +858,6 @@
    "outputs": [],
    "source": [
     "targets, preds_1 = get_all_prediction(cnn_1, test_loader)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "YwTFkR2RX-dx"
-   },
-   "source": [
-    "#### **Question 5.2** - Display the confusion matrix."
    ]
   },
   {
