--- a/MLP on MNIST.ipynb
+++ b/MLP on MNIST.ipynb
@@ -6,12 +6,8 @@
     "id": "mE2F5Cj5X-cq"
    },
    "source": [
-    "# Lab session 3 | Multi-Layer Perceptron (MLP) with pytorch\n",
+    "#  Multi-Layer Perceptron (MLP) with pytorch\n",
     "\n",
-    "pierre-henri.conze@imt-atlantique.fr \\\\\n",
-    "francois.rousseau@imt-atlantique.fr \\\\\n",
-    "sarah.reynaud@imt-atlantique.fr \\\\\n",
-    "claire.scavinner-dorval@imt-atlantique.fr\n",
     "\n",
     "---\n",
     "\n"
@@ -23,7 +19,7 @@
     "id": "aZNAqdzCX-cs"
    },
    "source": [
-    "## Objective of this lab session: use a multiple layer perceptron to process the MNIST dataset.\n",
+    "## Objective: use a multiple layer perceptron to process the MNIST dataset.\n",
     "\n",
     "\n",
     "**MNIST** is a computer vision dataset. It consists of images of handwritten digits. It also includes labels for each image, telling us which digit it is. In this lab session, we're going to train **Multi-Layer Perceptron** (MLP) models to look at images and predict to which digit they belong."
@@ -1141,15 +1137,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "4uAlWW7lsbDQ"
-   },
-   "source": [
-    "#### **Question 11.1** - What are the most common errors? **Answer**: ..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The most common errors:\n",
@@ -1167,9 +1154,7 @@
    "source": [
     "### 12- Deeper MLP\n",
     "\n",
-    "Our goal is to define a new architecture and train the network to reach (at least) 97% of global accuracy for the test dataset.\n",
-    "\n",
-    "#### **Question 12.1** - Define a deeper network architecture. In practice, we may use two hidden layers (with 512 neurons) as well as dropout ([documentation](https://pytorch.org/docs/stable/generated/torch.nn.Dropout.html)) to avoid overfitting. "
+    "Our goal is to define a new architecture and train the network to reach (at least) 97% of global accuracy for the test dataset.\n"
    ]
   },
   {
@@ -1240,15 +1225,6 @@
    "source": [
     "model_2 = Net2()\n",
     "model_2.to(device=device)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "yvfwuG2b7toM"
-   },
-   "source": [
-    "#### **Question 12.2** - Train the new MLP model (*Net2*)."
    ]
   },
   {
@@ -1364,15 +1340,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "sO9E6UY8H3ab"
-   },
-   "source": [
-    "#### **Question 12.3** - For comparison purposes, display in a single graph the loss functions for both training and validation sets and both models (*Net1* and *Net2*)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
@@ -1425,15 +1392,6 @@
     "plt.title('loss function', size=10)\n",
     "plt.xlabel('epoch', size=10)\n",
     "plt.ylabel('loss value', size=10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "H0nkNOcBuIfk"
-   },
-   "source": [
-    "#### **Question 12.4** - Perform the quantitative assessment by computing per-class and overall accuracy scores."
    ]
   },
   {
@@ -1530,15 +1488,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "6wq-olf_86Jn"
-   },
-   "source": [
-    "#### **Question 12.5** - Perform the qualitative assessment by displaying some test images with their predicted and ground truth labels."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
@@ -1574,15 +1523,6 @@
    ],
    "source": [
     "visualization(model_2, test_loader)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "94BcUYIG9Vv_"
-   },
-   "source": [
-    "#### **Question 12.6** - Compute the predicted labels for the test set and display the resulting confusion matrix."
    ]
   },
   {
